# message-server-backend

./: .gitignore  Cargo.toml
src/: main.rs  web_socket.rs
src/database/: init.rs  mod.rs  user.rs
src/middlewares/: _auth.rs  mod.rs
src/routers/: login.rs  mod.rs  ws.rs
src/structure/: auth.rs  mod.rs  state.rs  user.rs
