[package]
name = "message-server-backend"
version = "0.0.0"
edition = "2021"

[dependencies]
axum = { version = "0.5.6", features = ["ws", "headers"] }
tokio = { version = "1.18.2", features = ["rt-multi-thread", "macros"] }
serde = { version = "1.0.137", features = ["derive"] }
serde_json = "1.0.81"
mongodb = "2.2.1"
tower-http = { version = "0.3.3", features = ["full"] }
futures = "0.3.21"
tower = "0.4.12"
jsonwebtoken = "8.1.0"
